--- a/css/base.css
+++ b/css/base.css
@@ -1,13 +1,34 @@
-html, body{
+html,
+body {
     padding: 0px;
     margin: 0px;
     color: #ffffff;
 }
 
-.no-margin{
+.no-margin {
     margin: 0px;
 }
 
-.no-padding{
+.no-padding {
     padding: 0px;
+}
+
+a:link {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:visited {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:active {
+    color: inherit;
+    text-decoration: none;
 }
