--- a/css/style.css
+++ b/css/style.css
@@ -6,14 +6,14 @@
 
 #landing-overlay #landing-overlay-logo{
     padding-top: 4%;
-    padding-left: 10px;
+    padding-left: 30px;
     height: 30%;
     width: auto;
 }
 
 #landing-overlay #countdown-timer{
     padding-top: 5%;
-    padding-left: 3%;
+    padding-left: 3.8%;
     font-size: 5em;
 }
 
@@ -22,11 +22,23 @@
 }
 
 #landing-overlay #countdown-timer .countdown-description{
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 2px;
     display: block;
-    padding-left: 5%;
+    padding-left: 3%;
 }
 
 #landing-overlay #countdown-timer .countdown-description-days{
-    padding-left: 13%;
+    padding-left: 14%;
+}
+
+#landing-overlay #overlay-social{
+    position: absolute;
+    bottom: 20px;
+    left: 3.8%;
+}
+
+#landing-overlay #overlay-social a{
+    padding-right: 20px;
 }
