--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,17 @@
 #landing-overlay{
     background-color: #000000;
+    color: #ffffff;
     width:100%;
     height: 100vh;
+    position: fixed; 
+    width: 100%; 
+    height: 100%; 
+    top: 0; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2; 
+    transition: top 1s;
 }
 
 #landing-overlay #landing-overlay-logo{
@@ -63,4 +73,15 @@
 #landing-overlay .btn:focus{
     color: inherit;
     outline: 0px;
+}
+
+#main{
+    width:100%;
+    position: fixed;
+    top: 100%; 
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2; 
+    transition: top 1s;
 }
