--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 
 
 .font__open-sans{
     font-family: 'Open Sans', sans-serif;
+}
+
+.font__oswald{
+    font-family: 'Oswald', sans-serif;
 }
