--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
     bottom: 0;
     z-index: 2;
     transition: top 1s;
-    display: none;
+    /*display: none;*/
 }
 
 #landing-overlay #landing-overlay-logo {
@@ -80,7 +80,7 @@
 #main {
     width: 100%;
     position: fixed;
-    top: 0;
+    top: 100%;
     left: 0;
     right: 0;
     bottom: 0;
