--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,6 @@
     width: 100%;
     height: 100vh;
     position: fixed;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
     right: 0;
@@ -23,7 +21,7 @@
 #landing-overlay #countdown-timer {
     padding-top: 7%;
     padding-left: 3.8%;
-    font-size: 5em;
+    font-size: 5vw;
 }
 
 #landing-overlay #countdown-timer [class ^="countdown-"],
@@ -32,7 +30,7 @@
 }
 
 #landing-overlay #countdown-timer .countdown-description {
-    font-size: 14px;
+    font-size: 2vw;
     font-weight: bold;
     letter-spacing: 2px;
     display: block;
