--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,61 @@
         font-size: 14px !important;
     }
 }
+@media only screen and (max-height: 600px){
+    #landing-overlay{
+        padding-top: 5% !important;
+    }
+}
+@media only screen and (max-width: 400px){
+    #countdown-timer {
+        padding-left: 9% !important;
+    }
+    #landing-overlay{
+        padding-top: 50%;
+    }
+    #landing-overlay-logo{
+        max-width: 450px !important;
+    }
+    #countdown-timer {
+        font-size: 6vw !important;
+    }
+    .countdown-description {
+        font-size: 2.5vw !important;
+    }
+}
+@media only screen and (min-width: 401px) and (max-width: 600px) {
+    #countdown-timer {
+        padding-left: 9% !important;
+    }
+    #landing-overlay{
+        padding-top: 45%;
+    }
+    #landing-overlay-logo{
+        max-width: 500px !important;
+    }
+    #countdown-timer {
+        font-size: 6vw !important;
+    }
+    .countdown-description {
+        font-size: 2.5vw !important;
+    }
+}
+@media only screen and (min-width: 601px) and (max-width: 800px) {
+    #countdown-timer {
+        padding-left: 6% !important;
+    }
+    #landing-overlay{
+        padding-top: 25%;
+    }
+}
+@media only screen and (min-width: 801px) and (max-width: 1025px) {
+    #countdown-timer {
+        padding-left: 5% !important;
+    }
+    #landing-overlay{
+        padding-top: 15%;
+    }
+}
 
 #landing-overlay #landing-overlay-logo {
     padding-top: 4%;
@@ -28,7 +83,7 @@
 
 #landing-overlay #countdown-timer {
     padding-top: 7%;
-    padding-left: 3.8%;
+    padding-left: 4%;
     font-size: 5vw;
 }
 
