--- a/css/style.css
+++ b/css/style.css
@@ -1,266 +1,360 @@
 #landing-overlay {
-    background-color: #000000;
-    color: #ffffff;
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 2;
-    transition: top 1s;
-    /*display: none;*/
+  background-color: #000000;
+  color: #ffffff;
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  transition: top 1s;
+  display: none;
 }
 @media only screen and (max-width: 800px) {
-    .sub-heading {
-        font-size: 6vw !important;
-    }
-    #landing .details p {
-        font-size: 14px !important;
-    }
+  .sub-heading {
+    font-size: 6vw !important;
+  }
+  #landing .details p {
+    font-size: 14px !important;
+  }
 }
-@media only screen and (max-height: 600px){
-    #landing-overlay{
-        padding-top: 5% !important;
-    }
+@media only screen and (max-height: 600px) {
+  #landing-overlay {
+    padding-top: 5% !important;
+  }
 }
-@media only screen and (max-width: 400px){
-    #countdown-timer {
-        padding-left: 9% !important;
-    }
-    #landing-overlay{
-        padding-top: 50%;
-    }
-    #landing-overlay-logo{
-        max-width: 450px !important;
-    }
-    #countdown-timer {
-        font-size: 6vw !important;
-    }
-    .countdown-description {
-        font-size: 2.5vw !important;
-    }
+@media only screen and (max-width: 400px) {
+  #countdown-timer {
+    padding-left: 9% !important;
+  }
+  #landing-overlay {
+    padding-top: 50%;
+  }
+  #landing-overlay-logo {
+    max-width: 450px !important;
+  }
+  #countdown-timer {
+    font-size: 6vw !important;
+  }
+  .countdown-description {
+    font-size: 2.5vw !important;
+  }
 }
 @media only screen and (min-width: 401px) and (max-width: 600px) {
-    #countdown-timer {
-        padding-left: 9% !important;
-    }
-    #landing-overlay{
-        padding-top: 45%;
-    }
-    #landing-overlay-logo{
-        max-width: 500px !important;
-    }
-    #countdown-timer {
-        font-size: 6vw !important;
-    }
-    .countdown-description {
-        font-size: 2.5vw !important;
-    }
+  #countdown-timer {
+    padding-left: 9% !important;
+  }
+  #landing-overlay {
+    padding-top: 45%;
+  }
+  #landing-overlay-logo {
+    max-width: 500px !important;
+  }
+  #countdown-timer {
+    font-size: 6vw !important;
+  }
+  .countdown-description {
+    font-size: 2.5vw !important;
+  }
 }
 @media only screen and (min-width: 601px) and (max-width: 800px) {
-    #countdown-timer {
-        padding-left: 6% !important;
-    }
-    #landing-overlay{
-        padding-top: 25%;
-    }
+  #countdown-timer {
+    padding-left: 6% !important;
+  }
+  #landing-overlay {
+    padding-top: 25%;
+  }
 }
 @media only screen and (min-width: 801px) and (max-width: 1025px) {
-    #countdown-timer {
-        padding-left: 5% !important;
-    }
-    #landing-overlay{
-        padding-top: 15%;
-    }
+  #countdown-timer {
+    padding-left: 5% !important;
+  }
+  #landing-overlay {
+    padding-top: 15%;
+  }
 }
 
 #landing-overlay #landing-overlay-logo {
-    padding-top: 4%;
-    padding-left: 30px;
+  padding-top: 4%;
+  padding-left: 30px;
 }
 
 #landing-overlay #countdown-timer {
-    padding-top: 7%;
-    padding-left: 4%;
-    font-size: 5vw;
+  padding-top: 7%;
+  padding-left: 4%;
+  font-size: 5vw;
 }
 
-#landing-overlay #countdown-timer [class ^="countdown-"],
-#landing-overlay #countdown-timer [id ^="countdown-"] {
-    display: inline-block;
+#landing-overlay #countdown-timer [class^="countdown-"],
+#landing-overlay #countdown-timer [id^="countdown-"] {
+  display: inline-block;
 }
 
 #landing-overlay #countdown-timer .countdown-description {
-    font-size: 1.5vw;
-    font-weight: bold;
-    letter-spacing: 2px;
-    display: block;
-    padding-left: 3%;
+  font-size: 1.5vw;
+  font-weight: bold;
+  letter-spacing: 2px;
+  display: block;
+  padding-left: 3%;
 }
 
-
-
 #landing-overlay #overlay-social {
-    position: absolute;
-    bottom: 20px;
-    left: 3.8%;
+  position: absolute;
+  bottom: 20px;
+  left: 3.8%;
 }
 
 #landing-overlay #overlay-social a {
-    padding-right: 20px;
+  padding-right: 20px;
 }
 
 #landing-overlay .btn {
-    position: absolute;
-    right: 3.8%;
-    bottom: 20px;
-    background-color: red;
-    border-radius: 0px;
-    font-weight: bold;
-    letter-spacing: 2px;
+  position: absolute;
+  right: 3.8%;
+  bottom: 20px;
+  background-color: red;
+  border-radius: 0px;
+  font-weight: bold;
+  letter-spacing: 2px;
 }
 
 #landing-overlay .btn:hover {
-    color: inherit;
+  color: inherit;
 }
 
 #landing-overlay .btn:active {
-    color: inherit;
-    outline: 0px;
+  color: inherit;
+  outline: 0px;
 }
 
 #landing-overlay .btn:focus {
-    color: inherit;
-    outline: 0px;
+  color: inherit;
+  outline: 0px;
 }
 
 #main {
-    width: 100%;
-    position: fixed;
-    top: 100%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 2;
-    transition: top 1s;
-    overflow-y: scroll;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  transition: top 1s;
+  overflow-y: scroll;
 }
 
 #landing {
-    padding-top: 10%;
-    letter-spacing: 1.2px;
+  padding-top: 10%;
+  letter-spacing: 1.2px;
 }
 
 #landing em {
-    font-size: 32px;
+  font-size: 32px;
 }
 
 #landing p {
-    margin: 0px;
+  margin: 0px;
 }
 
 #landing iframe {
-    width: 100%;
-    padding: 20px 0px 0px 0px;
+  width: 100%;
+  padding: 20px 0px 0px 0px;
+  border: 0;
+  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale");
+  /* Firefox 10+ */
+  filter: gray;
+  /* IE6-9 */
+  -webkit-filter: grayscale(99%);
+  /* Chrome 19+ & Safari 6+ */
+  -webkit-backface-visibility: hidden;
 }
 
 #landing .details p {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 #landing .small-hr {
-    margin: 2% 30%;
+  margin: 2% 30%;
 }
 
 nav.navbar {
-    border-radius: 0px;
+  border-radius: 0px;
 }
 
 .sub-heading {
-    font-size: 64px;
-    font-weight: bold;
-    letter-spacing: 5px;
+  font-size: 64px;
+  font-weight: bold;
+  letter-spacing: 5px;
+}
+
+#container-speaker {
+  padding-top: 50px;
+}
+
+#container-speaker .card {
+  min-height: 400px;
+  background: #fff;
+  transition: 0.4s;
+  margin: 8px;
+  border-radius: 3px;
+  padding: 0px;
+  box-shadow: 0.5px 2px 2px 0px rgba(0, 0, 0, 0.14),
+    0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  padding-bottom: 5px;
+}
+
+#container-speaker .card:hover {
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+#container-speaker .card .box {
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+#container-speaker .card .box .img {
+  position: relative;
+  top: 10px;
+  margin: 10px auto 40px auto;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  overflow: hidden;
+  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+  filter: gray; /* IE6-9 */
+  -webkit-filter: grayscale(100%);
+}
+
+#container-speaker .card .box .img img {
+  width: 100%;
+  height: 100%;
+}
+
+#container-speaker .card .box h2 {
+  font-size: 20px;
+  color: red;
+  margin: 20px auto;
+  font-weight: bold;
+}
+
+#container-speaker .card .box h2 span {
+  font-size: 14px;
+  display: inline-block;
+  padding: 4px 10px;
+  border-radius: 15px;
+  color: #262626;
+}
+
+#container-speaker .card .box p {
+  color: #262626;
+}
+
+#container-speaker .card .box span {
+  display: inline-flex;
+}
+
+#container-speaker .card .box ul {
+  margin: 0;
+  padding: 0;
+}
+
+#container-speaker .card .box ul li {
+  list-style: none;
+  float: left;
+}
+
+#container-speaker .card .box ul li a i {
+  display: block;
+  color: #888;
+  width: 35px;
+  height: 35px;
+  margin: 0px 2px;
+  padding: 7px;
+  font-size: 20px;
+  text-align: center;
+}
+
+#container-speaker .parent-card {
+  padding: 0px;
+  margin: 0px;
+}
+
+#container-speaker .speaker-social {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#container-speaker .row {
+  margin: 0px 10px 0px -5px;
 }
 
 #container-team .container-team-member {
-    padding-bottom: 50px;
+  padding-bottom: 50px;
 }
-
 
 #container-team .float-my-children {
-    margin: 0px 20px;
+  margin: 0px 20px;
 }
 
-#container-team .float-my-children>* {
-    float: left;
-    margin-right: 5px;
+#container-team .float-my-children > * {
+  float: left;
+  margin-right: 5px;
 }
 
 #container-team .float-my-children img {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='matrix' values='0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
+  filter: gray; /* IE6-9 */
+  -webkit-filter: grayscale(100%);
 }
 
 #container-team .clearfix {
-    *zoom: 1
+  *zoom: 1;
 }
 
 #container-team .clearfix:before,
 #container-team .clearfix:after {
-    content: " ";
-    display: table;
+  content: " ";
+  display: table;
 }
 
 #container-team .clearfix:after {
-    clear: both;
+  clear: both;
 }
 
 #container-team ul {
-    margin: 0;
-    padding: 7px 0px 0px 0px;
+  margin: 0;
+  padding: 7px 0px 0px 0px;
 }
 
 #container-team ul li {
-    list-style: none;
-    float: left;
+  list-style: none;
+  float: left;
 }
 
 #container-team ul li a i {
-    display: block;
-    color: #888;
-    margin: 0px 15px 0px 0px;
-    font-size: 20px;
-    text-align: center;
+  display: block;
+  color: #888;
+  margin: 0px 15px 0px 0px;
+  font-size: 20px;
+  text-align: center;
 }
 
 #container-team .team-member-details {
-    margin: 10px auto 16px 20px;
+  margin: 10px auto 16px 20px;
+  font-weight: bold;
 }
 
 #container-team .team-member-details .team-member-name {
-    font-weight: bold;
-}
-
-#container-speaker .card {
-    height: 600px;
-    background: #fff;
-    transition: 0.4s;
-    margin: 32px 8px;
-    border-radius: 3px;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-    padding: 0px;
-    overflow: hidden;
-}
-
-#container-speaker .card:hover {
-    box-shadow: 0 8px 10px rgba(0, 0, 0, .2);
-}
-
-#container-speaker .card img{
-    height: 600px;
-    width: 100%;
+  color: red;
 }
