--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-.no-padding{
-    padding: 0px !important;
-}
-
 #landing-overlay {
   background-color: #000000;
   color: #ffffff;
@@ -22,6 +18,10 @@
   }
   #landing .details p {
     font-size: 14px !important;
+  }
+
+  .spacer{
+      display: none;
   }
 }
 @media only screen and (max-height: 600px) {
@@ -158,7 +158,7 @@
 
 #landing {
   padding-top: 10%;
-  letter-spacing: 1.2px;
+  letter-spacing: 1.1px;
 }
 
 #landing em {
@@ -202,6 +202,7 @@ nav.navbar {
 
 #container-speaker {
   padding-top: 50px;
+  padding-bottom: 80px;
 }
 
 #container-speaker .card {
@@ -306,6 +307,7 @@ nav.navbar {
   margin: 0px 10px 0px -5px;
 }
 
+
 #container-team .container-team-member {
   padding-bottom: 50px;
 }
@@ -367,4 +369,37 @@ nav.navbar {
 
 #container-team .team-member-details .team-member-name {
   color: red;
+}
+
+.banner{
+    width: 100%;
+    height: auto;
+}
+
+footer{
+    letter-spacing: 1.1px;
+    padding-bottom: 10px;
+}
+footer a i {
+  margin-left: 10px;
+  font-size: 18px;
+}
+footer a:hover{
+    text-decoration: underline;
+}
+
+@media(min-width: 1100px){
+    footer .container{
+        margin-left: 110px;            
+    }
+}
+@media (min-width: 1024px) and (max-width: 1100px){
+    footer .container{
+        margin-left: 50px;
+    }
+}
+@media (min-width: 768px) and (max-width: 1023px){
+    footer .container{
+        margin-left: 35px;
+    }
 }
