--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   background-color: #000000;
   color: #ffffff;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   top: 0;
   left: 0;
