completed teams section

--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,6 @@ nav.navbar {
 }
 
 #container-team .float-my-children > * {
-  float: left;
   margin-right: 5px;
 }
 
@@ -349,7 +348,7 @@ nav.navbar {
 
 #container-team ul li {
   list-style: none;
-  float: left;
+  display: inline-block;
 }
 
 #container-team ul li a i {
@@ -361,7 +360,7 @@ nav.navbar {
 }
 
 #container-team .team-member-details {
-  margin: 10px auto 16px 20px;
+  margin: 10px auto 16px 0px;
   font-weight: bold;
 }
 
