--- a/css/style.css
+++ b/css/style.css
@@ -331,15 +331,45 @@ footer a:hover {
   footer .container {
     margin-left: 110px;
   }
+  #landing-overlay img#landing-overlay-image {
+    z-index: 999;
+    height: 350px;
+    width: auto;
+    position: absolute;
+    right: 50px;
+    bottom: 150px;
+  }
+}
+@media (min-width: 1100px) and (max-width: 1200px) {
+  #landing-overlay #countdown-timer .countdown-timer-divider {
+    position: relative;
+    top: -30px;
+  }
 }
 @media (min-width: 1024px) and (max-width: 1100px) {
   footer .container {
     margin-left: 50px;
   }
+  #landing-overlay #countdown-timer .countdown-timer-divider {
+    position: relative;
+    top: -29px;
+  }
+  #landing-overlay img#landing-overlay-image {
+    z-index: 999;
+    height: 300px;
+    width: auto;
+    position: absolute;
+    right: 50px;
+    bottom: 150px;
+  }
 }
 @media (min-width: 768px) and (max-width: 1023px) {
   footer .container {
     margin-left: 35px;
+  }
+  #landing-overlay #countdown-timer .countdown-timer-divider {
+    position: relative;
+    top: -25px;
   }
 }
 
@@ -400,7 +430,11 @@ footer a:hover {
   .spacer {
     display: none;
   }
+  #landing-overlay img#landing-overlay-image {
+    display: none !important;
+  }
 }
+
 @media only screen and (max-height: 600px) {
   #landing-overlay {
     padding-top: 5% !important;
@@ -417,7 +451,7 @@ footer a:hover {
     max-width: 450px !important;
     width: 100%;
   }
-  #landing-overlay #explore-button{
+  #landing-overlay #explore-button {
     font-size: 11px;
   }
   #countdown-timer {
@@ -478,7 +512,13 @@ footer a:hover {
   }
   #landing-overlay #countdown-timer .countdown-timer-divider {
     position: relative;
-    top: -30px;
+    top: -38px;
+  }
+}
+@media only screen and (min-width: 601px) and (max-width: 700px) {
+  #landing-overlay #countdown-timer .countdown-timer-divider {
+    position: relative;
+    top: -32px;
   }
 }
 @media only screen and (min-width: 801px) and (max-width: 1025px) {
@@ -487,5 +527,19 @@ footer a:hover {
   }
   #landing-overlay {
     padding-top: 15%;
+  }
+  #landing-overlay img#landing-overlay-image {
+    z-index: 999;
+    height: 240px;
+    width: auto;
+    position: absolute;
+    right: 50px;
+    bottom: 150px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  #landing-overlay #overlay-social {
+    left: 8%;
   }
 }
