--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,6 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
-  transition: top 1s;
 }
 
 #landing-overlay #landing-overlay-logo {
@@ -82,16 +76,9 @@
   outline: 0px;
 }
 
-#main {
-  width: 100%;
-  position: fixed;
+#main{
+  position: absolute;
   top: 100%;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
-  transition: top 1s;
-  overflow-y: scroll;
   background-color: #ffffff;
 }
 
