--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+a{
+  color: inherit;
+  cursor: pointer;
+}
+
+a:visited{
+  color: inherit;
+}
+
+a:hover{
+  color: inherit;
+}
+
+a:active{
+  color: inherit;
+}
+
 #landing-overlay {
   background-color: #000000;
   color: #ffffff;
@@ -237,15 +254,15 @@ nav.navbar {
   padding-bottom: 150px;
 }
 
-#container-team .float-my-children, #container-performer .float-my-children {
+#container-team .float-my-children, #container-performer .float-my-children, #container-team-extra .float-my-children {
   margin: 0px 20px;
 }
 
-#container-team .float-my-children > *, #container-performer .float-my-children > * {
+#container-team .float-my-children > *, #container-performer .float-my-children > *,#container-team-extra .float-my-children > * {
   margin-right: 5px;
 }
 
-#container-team .float-my-children img{
+#container-team .float-my-children img, #container-team-extra .float-my-children img{
   width: 150px;
   height: 150px;
   border-radius: 50%;
@@ -254,33 +271,35 @@ nav.navbar {
   width: 150px;
   height: 150px;
 }
-#container-team .clearfix, #container-performer .clearfix  {
+#container-team .clearfix, #container-performer .clearfix, #container-team-extra .clearfix  {
   *zoom: 1;
 }
 
 #container-team .clearfix:before,
 #container-team .clearfix:after,
 #container-performer .clearfix:before,
-#container-performer .clearfix:after {
+#container-performer .clearfix:after,
+#container-team-extra .clearfix:before,
+#container-team-extra .clearfix:after {
   content: " ";
   display: table;
 }
 
-#container-team .clearfix:after, #container-performer .clearfix:after {
+#container-team .clearfix:after, #container-performer .clearfix:after, #container-team-extra .clearfix:after {
   clear: both;
 }
 
-#container-team ul {
+#container-team ul, #container-team-extra ul {
   margin: 0;
   padding: 7px 0px 0px 0px;
 }
 
-#container-team ul li {
+#container-team ul li, #container-team-extra ul li {
   list-style: none;
   display: inline-block;
 }
 
-#container-team ul li a i {
+#container-team ul li a i, #container-team-extra ul li a i {
   display: block;
   color: #888;
   margin: 0px 15px 0px 0px;
@@ -288,12 +307,12 @@ nav.navbar {
   text-align: center;
 }
 
-#container-team .team-member-details{
+#container-team .team-member-details, #container-team-extra .team-member-details{
   margin: 10px auto 16px 0px;
   font-weight: bold;
 }
 
-#container-team .team-member-details .team-member-name{
+#container-team .team-member-details .team-member-name, #container-team-extra .team-member-details .team-member-name{
   color: #ee0000;
 }
 
@@ -449,7 +468,7 @@ footer a:hover {
   .countdown-description {
     font-size: 2.5vw !important;
   }
-  #container-team .container-team-member, #container-performer, .container-performer-member {
+  #container-team .container-team-member, #container-performer, .container-performer-member, #container-team-extra .container-team-member {
     padding-right: 0px;
     padding-left: 0px;
   }
@@ -535,4 +554,8 @@ footer a:hover {
     padding-bottom: 50px;
   }
   
+}
+
+#container-team-extra{
+  display: none;
 }
