--- a/css/base.css
+++ b/css/base.css
@@ -3,6 +3,30 @@ body {
 	padding: 0px;
 	margin: 0px;
 }
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
+::-webkit-scrollbar {
+	width: 10px;
+	height: 5px;
+	border-radius: 12px;
+}
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
+
+#root {
+	overflow-x: hidden;
+}
 
 .no-margin {
 	margin: 0px !important;
@@ -34,20 +58,4 @@ a:active {
 
 .font-bolder {
 	font-weight: bolder;
-}
-
-::-webkit-scrollbar {
-	width: 15px;
-	height: 5px;
-	border-radius: 12px;
-}
-::-webkit-scrollbar-track {
-	background: #f1f1f1;
-}
-
-::-webkit-scrollbar-thumb {
-	background: #888;
-}
-::-webkit-scrollbar-thumb:hover {
-	background: #555;
 }
