--- a/css/style.css
+++ b/css/style.css
@@ -199,9 +199,10 @@ nav.navbar {
 
 #container-speaker .card .box {
 	text-align: center;
-	padding: 20px;
 	box-sizing: border-box;
 	width: 100%;
+	height: 450px;
+	padding: 10px;
 }
 
 #container-speaker .card .box .img {
